--- a/.github/workflows/regression.yaml
+++ b/.github/workflows/regression.yaml
@@ -10,4 +10,4 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Tests
-      run: sudo ./tests/regression.sh
+      run: sudo ./scripts/regression.sh
