--- a/.github/workflows/packagecloud.yaml
+++ b/.github/workflows/packagecloud.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Create artifact
         run: |
           sudo apt-get update
-          sudo apt-get -y git curl ca-certificates gnupg lsb-release build-essential
+          sudo apt-get install -y git curl ca-certificates gnupg lsb-release build-essential
           curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/apt.postgresql.org.gpg
           sudo apt-get update
           sudo apt-get install -y postgresql-server-dev-12
