--- a/.github/workflows/packagecloud.yaml
+++ b/.github/workflows/packagecloud.yaml
@@ -18,6 +18,6 @@ jobs:
           curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/apt.postgresql.org.gpg > /dev/null
           sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
           sudo apt-get update
-          sudo apt-get install -y postgresql-server-dev-12
-          find . -type f
+          sudo apt-get install -y postgresql-12 postgresql-server-dev-12
+          pg_config
           make
