--- a/.github/workflows/packagecloud.yaml
+++ b/.github/workflows/packagecloud.yaml
@@ -1,7 +1,7 @@
 name: packagecloud
 on: [ push ]
 jobs:
-  build-ubuntu-artifact:
+  build-ubuntu-artifact-12:
     runs-on: ${{ matrix.distrib }}
     strategy:
       matrix:
@@ -13,11 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Create artifact
         run: |
-          sudo apt-get update
-          sudo apt-get install -y git curl ca-certificates gnupg lsb-release build-essential
-          curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/apt.postgresql.org.gpg > /dev/null
-          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
-          sudo apt-get update
-          sudo apt-get install -y postgresql-12 postgresql-server-dev-12
-          pg_config
+          export PG_VERSION=12
+          export PG_CONFIG=/usr/lib/postgresql/$PG_VERSION/bin/pg_config
+          ./.github/ubuntu-prepare.sh
           make
