--- a/.github/workflows/packagecloud.yaml
+++ b/.github/workflows/packagecloud.yaml
@@ -28,6 +28,10 @@ jobs:
       - name: Build deb
         uses: vadv/publish@main
         with:
+          command: find .
+      - name: Build deb
+        uses: vadv/publish@main
+        with:
           command: fpm -s dir -t deb -C /github/home/package -d postgresql-$PG_VERSION --name "pg_store_plans" --version "1.8" --iteration 1 --description "vadv pg_store_plans" -p "/github/home/deb/pg_store_plans-1.8.deb"
       - name: Publish deb
         uses: vadv/publish@main
