--- a/.github/workflows/packagecloud.yaml
+++ b/.github/workflows/packagecloud.yaml
@@ -15,6 +15,7 @@ jobs:
           #- jammy
     env:
       PACKAGECLOUD_TOKEN: ${{ secrets.PACKAGECLOUD_TOKEN }}
+      PACKAGE_VERSION: 1.8
     steps:
       - uses: actions/checkout@v3
       - name: Create artifact
@@ -28,12 +29,8 @@ jobs:
       - name: Build deb
         uses: vadv/publish@main
         with:
-          command: find .
-      - name: Build deb
-        uses: vadv/publish@main
-        with:
-          command: fpm -s dir -t deb -C /github/workspace/package -d postgresql-$PG_VERSION --name "pg_store_plans" --version "1.8" --iteration 1 --description "vadv pg_store_plans" -p "/github/workspace/deb/pg_store_plans-1.8.deb"
+          command: fpm -s dir -t deb -C package -d postgresql-$PG_VERSION --name pg_store_plans --version $PACKAGE_VERSION --iteration 1 --description "vadv pg_store_plans" -p deb/pg_store_plans-$PACKAGE_VERSION.deb
       - name: Publish deb
         uses: vadv/publish@main
         with:
-          command: package_cloud push vadv/pg_store_plans/ubuntu/${{ matrix.distrib }} "/github/workspace/deb/pg_store_plans-1.8.deb"
+          command: package_cloud push vadv/pg_store_plans/ubuntu/${{ matrix.distrib }} deb/pg_store_plans-$PACKAGE_VERSION.deb
