--- a/.github/workflows/packagecloud.yaml
+++ b/.github/workflows/packagecloud.yaml
@@ -10,9 +10,9 @@ jobs:
           #- 13
           #- 14
         distrib:
-          #- bionic
+          #- 18.04
           - 20.04
-          #- jammy
+          #- 22.04
     env:
       PACKAGECLOUD_TOKEN: ${{ secrets.PACKAGECLOUD_TOKEN }}
       PACKAGE_VERSION: 1.8
@@ -21,7 +21,7 @@ jobs:
       - name: Create artifact
         run: |
           export PG_VERSION=${{ matrix.pg_version }}
-          export PG_CONFIG=/usr/lib/postgresql/$PG_VERSION/bin/pg_config
+          export PG_CONFIG=/usr/lib/postgresql/${{ matrix.pg_version }}/bin/pg_config
           ./.github/ubuntu-prepare.sh
           make
           DESTDIR=package make install
@@ -29,7 +29,7 @@ jobs:
       - name: Build deb
         uses: vadv/publish@main
         with:
-          command: fpm -s dir -t deb -C package -d postgresql-$PG_VERSION --name pg_store_plans --version $PACKAGE_VERSION --iteration 1 --description "vadv pg_store_plans" -p deb/pg_store_plans-$PACKAGE_VERSION.deb
+          command: fpm -s dir -t deb -C package -d postgresql-${{ matrix.pg_version }} --name pg_store_plans --version $PACKAGE_VERSION --iteration 1 -p deb/pg_store_plans-$PACKAGE_VERSION.deb
       - name: Publish deb
         uses: vadv/publish@main
         with:
