--- a/.github/workflows/regression.yaml
+++ b/.github/workflows/regression.yaml
@@ -1,53 +1,13 @@
 name: regression
-on: [push]
+on: [ push ]
 jobs:
-
-  test-10:
+  test:
+    strategy:
+      matrix:
+        pg_version: [ 10, 11, 12, 13, 14 ]
     runs-on: ubuntu-18.04
     steps:
-
     - name: Checkout repo
-      uses: actions/checkout@v2
-
+      uses: actions/checkout@v3
     - name: Tests
-      run: sudo PGVERSION=10 ./scripts/regression.sh
-
-  test-11:
-    runs-on: ubuntu-18.04
-    steps:
-
-    - name: Checkout repo
-      uses: actions/checkout@v2
-
-    - name: Tests
-      run: sudo PGVERSION=11 ./scripts/regression.sh
-
-  test-12:
-    runs-on: ubuntu-18.04
-    steps:
-
-    - name: Checkout repo
-      uses: actions/checkout@v2
-
-    - name: Tests
-      run: sudo PGVERSION=12 ./scripts/regression.sh
-
-  test-13:
-    runs-on: ubuntu-18.04
-    steps:
-
-    - name: Checkout repo
-      uses: actions/checkout@v2
-
-    - name: Tests
-      run: sudo PGVERSION=13 ./scripts/regression.sh
-
-  test-14:
-    runs-on: ubuntu-18.04
-    steps:
-
-    - name: Checkout repo
-      uses: actions/checkout@v2
-
-    - name: Tests
-      run: sudo PGVERSION=14 ./scripts/regression.sh
+      run: sudo PGVERSION=${{ matrix.pg_version }} ./scripts/regression.sh
