--- a/.github/workflows/regression.yaml
+++ b/.github/workflows/regression.yaml
@@ -1,11 +1,13 @@
 name: regression
-on: [push]
+on:
+  pull_request:
+    branches: [ "master" ]
 jobs:
   test:
     strategy:
       matrix:
         pg_version: [10, 11, 12, 13, 14, 15, 16, 17]
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
