--- a/.github/workflows/regression.yaml
+++ b/.github/workflows/regression.yaml
@@ -8,6 +8,8 @@ jobs:
       matrix:
         pg_version: [10, 11, 12, 13, 14, 15, 16, 17]
     runs-on: ubuntu-latest
+    container:
+      image: ubuntu:22.04
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
