--- a/.github/workflows/regression.yaml
+++ b/.github/workflows/regression.yaml
@@ -14,4 +14,4 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
       - name: Tests
-        run: sudo PGVERSION=${{ matrix.pg_version }} ./scripts/regression.sh
+        run: PGVERSION=${{ matrix.pg_version }} ./scripts/regression.sh
